tests/algorithms/x/Rust/web_programming/nasa_data.rs
// Generated by Mochi transpiler v0.10.63
use std::sync::atomic::{AtomicBool, AtomicI64, Ordering};
use std::time::{SystemTime, UNIX_EPOCH};
use std::process::Command;
static NOW_SEEDED: AtomicBool = AtomicBool::new(false);
static NOW_SEED: AtomicI64 = AtomicI64::new(0);
fn _now() -> i64 {
    if !NOW_SEEDED.load(Ordering::SeqCst) {
        if let Ok(s) = std::env::var("MOCHI_NOW_SEED") {
            if let Ok(v) = s.parse::<i64>() {
                NOW_SEED.store(v, Ordering::SeqCst);
                NOW_SEEDED.store(true, Ordering::SeqCst);
            }
        }
    }
    if NOW_SEEDED.load(Ordering::SeqCst) {
        let seed = (NOW_SEED.load(Ordering::SeqCst)*1664525 + 1013904223) % 2147483647;
        NOW_SEED.store(seed, Ordering::SeqCst);
        seed
    } else {
        SystemTime::now().duration_since(UNIX_EPOCH).unwrap().as_nanos() as i64
    }
}
fn _mem() -> i64 {
    if let Ok(mut f) = std::fs::File::open("/proc/self/statm") {
        let mut s = String::new();
        use std::io::Read;
        if f.read_to_string(&mut s).is_ok() {
            if let Some(rss) = s.split_whitespace().nth(1) {
                if let Ok(v) = rss.parse::<i64>() {
                    return v * 4096;
                }
            }
        }
    }
    0
}
fn _fetch(url: &str) -> String {
    let out = Command::new("curl").arg("-fsSL").arg(url).output().unwrap();
    let s = String::from_utf8_lossy(&out.stdout);
    if let Some(start) = s.find("\"title\"") {
        let rest = &s[start+8..];
        if let Some(begin) = rest.find('\"') {
            let rest2 = &rest[begin+1..];
            if let Some(end) = rest2.find('\"') {
                return rest2[..end].to_string();
            }
        }
    }
    String::new()
}
#[derive(Debug, Clone, Default)]
struct ApodData {
    url: String,
    title: String,
}
impl std::fmt::Display for ApodData {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{{")?;
        write!(f, "\"url\": \"{}\"", self.url)?;
        write!(f, ", ")?;
        write!(f, "\"title\": \"{}\"", self.title)?;
        write!(f, "}}")
    }
}

#[derive(Debug, Clone, Default)]
struct ArchiveItemData {
    description: String,
}
impl std::fmt::Display for ArchiveItemData {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{{")?;
        write!(f, "\"description\": \"{}\"", self.description)?;
        write!(f, "}}")
    }
}

#[derive(Debug, Clone, Default)]
struct ArchiveItem {
    data: Vec<ArchiveItemData>,
}
impl std::fmt::Display for ArchiveItem {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{{")?;
        write!(f, "\"data\": {:?}", self.data)?;
        write!(f, "}}")
    }
}

#[derive(Debug, Clone, Default)]
struct ArchiveCollection {
    items: Vec<ArchiveItem>,
}
impl std::fmt::Display for ArchiveCollection {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{{")?;
        write!(f, "\"items\": {:?}", self.items)?;
        write!(f, "}}")
    }
}

#[derive(Debug, Clone, Default)]
struct ArchiveResult {
    collection: ArchiveCollection,
}
impl std::fmt::Display for ArchiveResult {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{{")?;
        write!(f, "\"collection\": {}", self.collection)?;
        write!(f, "}}")
    }
}

fn main() {
        let _start: i64 = _now();
    fn get_apod_data(api_key: &str) -> ApodData {
    let mut data: ApodData = ApodData {url: "", title: _fetch("https://api.nasa.gov/planetary/apod?api_key=DEMO_KEY")};
    return data
};
    fn save_apod(api_key: &str) -> ApodData {
    let mut apod: ApodData = get_apod_data(api_key);
    return apod
};
    fn get_archive_data(query: &str) -> ArchiveResult {
    let mut data: ArchiveResult = ArchiveResult {collection: 0};
    return data
};
    fn mochi_main() {
    let mut apod: ApodData = save_apod(&"DEMO_KEY");
    println!("{}", apod.title.clone());
    let mut archive: ArchiveResult = get_archive_data(&"apollo 2011");
    let mut items: Vec<ArchiveItem> = archive.collection.clone().items.clone();
    let mut first_item = first(items.clone());
    let mut first_data = first(first_item.data);
    println!("{}", first_data.description);
};
    mochi_main();
    let _end: i64 = _now();
    let duration_us: i64 = ((_end - _start) / 1000);
    let memory_bytes: i64 = _mem();
    println!("{{\n  \"duration_us\": {},\n  \"memory_bytes\": {},\n  \"name\": \"{}\"\n}}", duration_us, memory_bytes, "main");

}
